some fixes & add get my projects feature
